<resources>
    <string name="app_name">Soundtracks and Scores</string>
    <!--<string name="app_name">Smirk TA Self</string>-->
    <string name="title_activity_entry">STS</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="first_name_hint">first name</string>
    <string name="last_name_hint">last name</string>
    <string name="email_hint">email</string>
    <string name="btn_save_contact">SAVE CONTACT</string>
    <string name="btn_search_contact">SEARCH CONTACTS</string>
    <string name="update_btn_text">UPDATE CONTACT</string>
    <string name="delete_btn_text">DELETE CONTACT</string>
    <string name="show_contacts">Show Contacts</string>
    <string name="test_text">Test Text</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="network_fragment_tag">Network Fragment</string>
    <string name="video_fragment_tag">Video Fragment</string>
    <string name="profile_fragment_tag">Profile Fragment</string>
    <string name="music_fragment_tag">Music Fragment</string>
    <string name="upload_button_text">UPLOAD</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="fingerprint_recognized">Fingerprint Recognized</string>

    <!-- Musical Acts - mock data -->
    <string name="taylor_swift" >Taylor Swift</string>
    <string name="t_swift_look_what_u_made_me_do">Look What You Made Me Do</string>
    <string name="cardi_b">Cardi B</string>
    <string name="cardi_b_bodak_yellow">Bodak Yellow</string>
    <string name="logic_ft_alessia_and_khalid">Logic Featuring Alessia Cara &amp; Khalid</string>
    <string name="l_fonsi_d_yankee_ft_jb">Luis Fonsi &amp; Daddy Yankee Featuring Justin Bieber</string>
    <string name="l_fonsi_d_yankee_despacito">Despacito</string>
    <string name="sam_smith">Sam Smith</string>
    <string name="s_smith_2_good_at_gb">Too Good at Goodbyes</string>
    <string name="dj_khaled_ri_b_tiller">DJ Khaled Featuring Rihanna &amp; Bryson Tiller</string>
    <string name="dj_khaled_ri_d_tiller_wild_thoughts">Wild Thoughts</string>
    <string name="french_mon_ft_sw_lee">French Montana Featuring Swae Lee</string>
    <string name="french_mon_ft_sw_lee_unforgettable">Unforgettable</string>
    <string name="charlie_puth">Charli Puth</string>
    <string name="charlie_puth_attention">Attention</string>
    <string name="imagine_dragons">Imagine Dragons</string>
    <string name="imagine_dragons_believer">Believer</string>
    <string name="shawn_mendes">Shawn Mendes</string>
    <string name="shawn_mendes_theres_nothing_holding">There\'s Nothing Holdin\' Me Back</string>

    <!--PROFILE FRAGMENT TITLES -->
    <string name="profile_videos_fragment">Videos</string>
    <string name="profile_fragment_pictures">Pictures</string>
    <string name="profile_register_work_frag">Register Material</string>
    <string name="profile_music_fragment">Music</string>
    <string name="profile_contacts_fragment">Contacts</string>
    <string name="profile_bio_fragment">Bio</string>
    <string name="profile_message_chat_fragment">Message and Chat</string>
    <string name="profile_purchase">Purchase</string>

    <string name="snackbar_fingerprint_setup_confirmation"> GOT IT</string>
    <string name="snackbar_fingerprint_setup_directions_alt">Go to settings to enable fingerprint authentication</string>
    <string name="snackbar_fingerprint_setup_directions">Want to use your finger print to login? Go to settings to enable.</string>
    <string name="fingerprint_dialog_option">Use your fingerprint for faster,\neasier access to your account.</string>
    <string name="confirm_fingerprint">Confirm fingerprint to continue</string>
    <string name="touch_sensor">Touch sensor</string>
    <string name="use_password">Use Password</string>
    <string name="cancel">Cancel</string>
    <string name="fingerprint_login">Fingerprint login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_work">Register Music</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_contact_image">Chat Contact Image</string>

</resources>
