<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".presentation.view.fragment.SignUpDialogFragment">

    <TextView
        android:id="@+id/tv_app_name_signup_dialog"
        style="@style/signup_dialog_header" />

    <EditText
        android:id="@+id/et_fname_signup_dialog"
        android:hint="@string/first_name"
        style="@style/et_fname_signup_dialog" />

    <EditText
        android:id="@+id/et_lname_signup_dialog"
        android:hint="@string/last_name"
        style="@style/et_lname_signup_dialog" />

    <EditText
        android:id="@+id/et_email_signup_dialog"
        android:hint="@string/email"
        style="@style/et_email_signup_dialog" />

    <EditText
        android:id="@+id/et_username_signup_dialog"
        android:hint="@string/username"
        style="@style/et_uname_signup_dialog" />

    <EditText
        android:id="@+id/et_password_signup_dialog"
        android:hint="@string/password"
        style="@style/et_pword_signup_dialog" />

</LinearLayout>