<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvAppNameLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/app_name"
        style="@style/style_login_dialog_header_text"/>

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        style="@style/style_et_uname_login_dialog" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        style="@style/style_et_pword_login_dialog" />

</LinearLayout>
